[package]
name = "domlist"
version = "1.7.1"
authors = ["wabuntu <to.wabuntu@proton.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/wabuntu"
repository = "https://github.com/wabuntu/domlist"
documentation = "https://docs.rs/domlist"
description = """
Collects stat infomation from virsh. Mainly for OpenStack admin.
"""

[dependencies]
ssh2 = "0.9.4"
prettytable-rs = "^0.10"
clap = { version = "4.3.4", features = ["derive"] }
